tests/ui/unnamed.stderr
error: use #[typetag::serde(name = "...")] to specify a unique name
 --> tests/ui/unnamed.rs:5:16
  |
4 | #[typetag::serde]
  | ----------------- in this procedural macro expansion
5 | impl Trait for (u8, u8) {}
  |                ^^^^^^^^
  |
  = note: this error originates in the attribute macro `typetag::serde` (in Nightly builds, run with -Z macro-backtrace for more info)
